Добавя автоматично планиране и пропорционален отпуск

--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
           <form id="vacationForm" class="row">
             <select id="vacationEmployeeSelect" required></select>
             <input id="vacationStartInput" type="date" required />
-            <input id="vacationEndInput" type="date" required />
+            <input id="vacationDaysInput" type="number" min="1" step="1" required placeholder="Брой работни дни" />
             <button type="submit">Маркирай отпуск</button>
           </form>
           <div id="vacationLedger"></div>
