Добавя редакция на всеки ред Период отпуск за мениджър/админ

--- a/index.html
+++ b/index.html
@@ -248,6 +248,12 @@
             <input id="vacationDaysInput" type="number" min="1" step="1" required placeholder="Брой работни дни" />
             <button type="submit">Маркирай отпуск</button>
           </form>
+          <div class="row vacation-filters-row">
+            <select id="vacationDepartmentFilterSelect">
+              <option value="all">Всички отдели</option>
+            </select>
+            <input id="vacationSearchInput" type="search" placeholder="Търси по име" aria-label="Търси по име" />
+          </div>
           <div id="vacationLedger"></div>
         </section>
 
