--- a/index.html
+++ b/index.html
@@ -226,6 +226,22 @@
               </label>
               <small class="field-help">Добавя допълнителни 6 дни за непълнолетни служители.</small>
             </div>
+            <div class="form-field form-field--checkbox">
+              <label class="field-inline field-checkbox">
+                <input id="employeeIsSirvInput" type="checkbox" />
+                <span>Работи на СИРВ (сумирано изчисляване на работното време)</span>
+              </label>
+            </div>
+            <div id="employeeSirvPeriodField" class="form-field form-field--checkbox hidden">
+              <label for="employeeSirvPeriodInput" class="field-label">Отчетен период (месеци)</label>
+              <select id="employeeSirvPeriodInput">
+                <option value="1">1</option>
+                <option value="2">2</option>
+                <option value="3">3</option>
+                <option value="4">4</option>
+                <option value="6">6</option>
+              </select>
+            </div>
             <div class="form-field form-field--action">
               <button type="submit" class="btn-add">Добави служител</button>
               <small class="field-help">Записва служителя и го добавя в графика.</small>
@@ -503,6 +519,20 @@
               <span class="hover-tooltip__text">с разрешение от родител и ИТ</span>
             </span>
           </label>
+          <label class="field-inline field-checkbox employee-edit-form__full-row">
+            <input id="editEmployeeIsSirvInput" type="checkbox" />
+            <span>Работи на СИРВ (сумирано изчисляване на работното време)</span>
+          </label>
+          <div id="editEmployeeSirvPeriodField" class="employee-edit-form__full-row hidden">
+            <label for="editEmployeeSirvPeriodInput" class="field-label">Отчетен период (месеци)</label>
+            <select id="editEmployeeSirvPeriodInput">
+              <option value="1">1</option>
+              <option value="2">2</option>
+              <option value="3">3</option>
+              <option value="4">4</option>
+              <option value="6">6</option>
+            </select>
+          </div>
           <div class="modal-actions">
             <button type="submit">Запази</button>
             <button id="cancelEmployeeEditBtn" type="button">Отказ</button>
