--- a/index.html
+++ b/index.html
@@ -148,6 +148,7 @@
             <span id="lockStatus" class="lock-status">Статус: Отключен</span>
           </div>
           <div id="monthInfo" class="month-info"></div>
+          <div id="scheduleOverviewPanel" class="schedule-overview-panel"></div>
           <div class="legend" id="shiftLegend"></div>
           <div class="table-wrap">
             <table id="scheduleTable"></table>
@@ -548,6 +549,7 @@
 
     </div>
 
+    <script src="./scheduleTotals.js"></script>
     <script src="./app.js"></script>
     <script src="./welcome.js"></script>
   </body>
