Add tenant-safe schedule lock/finalize flow and exports

--- a/index.html
+++ b/index.html
@@ -155,8 +155,8 @@
           </div>
 
           <div class="row actions-row">
-            <button id="lockScheduleBtn" type="button">Заключи графика</button>
-            <button id="unlockScheduleBtn" type="button">Отключи графика</button>
+            <button id="lockScheduleBtn" type="button">Заключи график</button>
+            <button id="unlockScheduleBtn" type="button">Отключи</button>
             <button id="exportExcelBtn" type="button">Експорт Excel</button>
             <button id="exportPdfBtn" type="button">Експорт PDF</button>
             <span id="lockStatus" class="lock-status">Статус: Отключен</span>
@@ -451,8 +451,8 @@
             <article>
               <h3>8) Заключване и експорт</h3>
               <ul>
-                <li><strong>„Заключи графика“</strong> спира редакции за текущия месец.</li>
-                <li><strong>„Отключи графика“</strong> връща възможността за промени.</li>
+                <li><strong>„Заключи график“</strong> спира редакции за текущия месец.</li>
+                <li><strong>„Отключи“</strong> връща възможността за промени.</li>
                 <li>Експортите <strong>Excel</strong> и <strong>PDF</strong> генерират текущата таблица за отчет и архив.</li>
               </ul>
             </article>
