Fix night labor conversion logic and summary calculations

--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
             <h3>Сумирано работно време и положен труд</h3>
             <p>
               Нормата за месеца = (работни дни без официални празници) × 8 ч. При СИРВ може да изберете период 1–6 месеца;
-              нощните часове (22:00–06:00) се приравняват с коефициент 1.14286. Отчетът показва извънредния труд за периода.
+              нощните часове (22:00–06:00, за непълнолетни 20:00–06:00) се приравняват с коефициент 1.43, когато са поне 3 часа. Отчетът показва извънредния труд за периода.
             </p>
             <form id="ratesForm" class="row">
               <label for="weekendRateInput">Коефициент почивен ден:</label>
