docs: update FAQ/Help with new platform features

--- a/index.html
+++ b/index.html
@@ -406,46 +406,55 @@
         <section id="helpTab" class="panel tab-panel marketing-panel">
           <h2>FAQ / Help — пълни инструкции за работа с платформата</h2>
           <p>
-            Тази секция описва подробно как се работи с всички налични функционалности: първоначална настройка, отдели,
-            служители, графици, отпуски, изчисления, заключване, експорт и поддръжка. Ползвайте я като вътрешно ръководство
-            за администратори, HR и ръководители на екипи.
+            Актуализирано ръководство за всички активни модули: достъп и фирми (multi-tenant), роли и права, служители,
+            отдели, графици, отсъствия, смени, празници, изчисления и контрол на заключване/експорт. Съдържанието е
+            структурирано като оперативен наръчник за собственици, администратори, ръководители и HR екипи.
           </p>
 
           <div class="marketing-columns help-columns">
             <article>
-              <h3>1) Първо стартиране и връзка с API</h3>
+              <h3>1) Достъп до платформата, вход и избор на фирма</h3>
               <ol>
-                <li>Отворете платформата и проверете статуса под заглавието.</li>
-                <li>Въведете валиден <strong>API URL</strong> (пример: <code>http://46.183.117.128:4000</code>).</li>
-                <li>Натиснете <strong>„Свържи“</strong>.</li>
-                <li>При успешна връзка всички данни (служители, графици, отпуски, смени) се синхронизират от бекенда.</li>
+                <li>Началният екран позволява <strong>Вход</strong> или <strong>Регистрация</strong> на организация.</li>
+                <li>При регистрация се създава фирма с owner акаунт (име, ЕИК, имейл, телефон и парола).</li>
+                <li>При вход с акаунт, който има достъп до повече от една фирма, системата отваря екран <strong>„Избери фирма“</strong>.</li>
+                <li>След избор на фирма се зарежда конкретната работна среда, а при налични права е активен и <strong>превключвател на фирми</strong>.</li>
               </ol>
-              <p><strong>Важно:</strong> при липса на връзка платформата продължава да работи с локално съхранени данни.</p>
+              <p><strong>Важно:</strong> винаги работете в правилния tenant (фирма), за да избегнете запис на данни в грешна организация.</p>
             </article>
 
             <article>
-              <h3>2) Отдели — структура на организацията</h3>
+              <h3>2) API свързаност, роли и права</h3>
               <ul>
-                <li>В таб <strong>„Отдели“</strong> добавяте нов отдел по име.</li>
-                <li>Смяна на име става с клик върху името на отдела.</li>
-                <li>Изтриване е възможно само ако няма служители в този отдел.</li>
-                <li>Създадените отдели се използват във всички останали модули (служители и графици).</li>
+                <li>Проверете статуса за връзка и задайте валиден <strong>API URL</strong>, след което натиснете <strong>„Свържи“</strong>.</li>
+                <li>В селектора <strong>„Роля“</strong> може да симулирате/преглеждате поведение по роля (потребител, мениджър, администратор, собственик).</li>
+                <li>Заключването на график и критичните настройки трябва да се управляват само от роли с административни права.</li>
+                <li>Бутон <strong>„Изход“</strong> прекратява активната сесия и връща към екрана за автентикация.</li>
               </ul>
             </article>
 
             <article>
-              <h3>3) Служители — въвеждане и поддръжка</h3>
+              <h3>3) Отдели и организационна структура</h3>
+              <ul>
+                <li>В таб <strong>„Отдели“</strong> създавате, преименувате и поддържате отделите на фирмата.</li>
+                <li>Отделите се използват във филтрите на графика, при служителите, отпуските и смените по отдел.</li>
+                <li>Изтриване е позволено само ако няма активни зависимости (служители/графици към отдела).</li>
+              </ul>
+            </article>
+
+            <article>
+              <h3>4) Служители — разширени данни и СИРВ</h3>
               <ul>
                 <li>Задължителни полета: три имена, длъжност, ЕГН (10 цифри), годишен отпуск.</li>
-                <li>Всеки служител може да бъде асоцииран към отдел от падащото меню.</li>
-                <li>Може да редактирате служител през бутона <strong>„Редакция“</strong>.</li>
-                <li>Всеки служител има <strong>начална дата</strong> и <strong>последен работен ден</strong> (по избор).</li>
-                <li>Клетките извън периода на назначение се визуализират в сиво и не влизат в изчисленията.</li>
+                <li>Поддържат се атрибути за отпуск: базов годишен размер, ТЕЛК (+6 дни), непълнолетен служител (+6 дни).</li>
+                <li>Опцията <strong>„Работи на СИРВ“</strong> активира избор на отчетен период (1, 2, 3, 4 или 6 месеца) на ниво служител.</li>
+                <li>Начална и крайна дата на назначение ограничават валидните дни за планиране и изчисление.</li>
+                <li>Редакцията на служител позволява актуализация на данните при промяна в статуса или длъжността.</li>
               </ul>
             </article>
 
             <article>
-              <h3>4) Месечен график — основен работен процес</h3>
+              <h3>5) Месечен график — основен работен процес</h3>
               <ol>
                 <li>Изберете месец от <strong>„Месец“</strong>.</li>
                 <li>Натиснете <strong>„Генерирай календар“</strong>.</li>
@@ -456,41 +465,54 @@
             </article>
 
             <article>
-              <h3>5) Отпуски</h3>
+              <h3>6) Отпуски и отсъствия (вкл. почасови)</h3>
               <ul>
-                <li>Изберете служител и период (начална и крайна дата).</li>
-                <li>Натиснете <strong>„Маркирай отпуск“</strong>.</li>
-                <li>Системата пази хронология на отпуските в секцията под формата.</li>
-                <li>Отпуските участват в обобщенията и визуализацията на графика.</li>
+                <li>В таб <strong>„Отпуски“</strong> маркирате платен отпуск по начална дата и брой работни дни.</li>
+                <li>Панелът <strong>„Управление на отсъствия“</strong> поддържа тип отсъствие, период „от/до“ и минути на ден (по избор).</li>
+                <li>Системата прескача уикенди и официални празници при изчисляване на работни дни за отпуск.</li>
+                <li>Ledger справката има филтър по отдел и търсене по служител за бързи проверки от HR.</li>
+                <li>При нужда от корекция, използвайте редакция на периода и броя дни, за да синхронизирате реално ползвания отпуск.</li>
               </ul>
             </article>
 
             <article>
-              <h3>6) Настройки → Изчисления</h3>
+              <h3>7) Изчисления: норма, извънреден и нощен труд</h3>
               <ul>
-                <li>Настройвате коефициенти за почивен ден и официален празник.</li>
-                <li>Задавате период на СИРВ (1–6 месеца).</li>
-                <li>Месечната норма и извънредният труд се изчисляват автоматично в обобщенията.</li>
-                <li>Нощният труд (22:00–06:00) се приравнява с действащия коефициент.</li>
+                <li>В <strong>Настройки → Изчисления</strong> се задават коефициенти за почивен ден, празник и период на СИРВ.</li>
+                <li>Нормата се формира по работни дни без официални празници × 8 часа.</li>
+                <li>Нощният труд се отчита по правилата за часови диапазон и коефициент за приравняване.</li>
+                <li>Обобщенията показват отработени часове, норма и извънреден труд за управленски контрол.</li>
               </ul>
             </article>
 
             <article>
-              <h3>7) Настройки → Смени</h3>
+              <h3>8) Настройки → Смени (global и по отдел) + импорт</h3>
               <ul>
-                <li>Добавяте персонализирани смени с код, име, начален и краен час.</li>
-                <li>Наличните смени се показват като легенда в графика.</li>
+                <li>Създавате смени с код, име, начало/край, почивка (минути) и дали почивката е включена.</li>
+                <li>Смените могат да са <strong>global</strong> (за всички) или специфични за отдел.</li>
+                <li>Поддържа се импорт от Excel/CSV: шаблон, preview, избор на отдел и commit с опция за update duplicates.</li>
+                <li>Наличните смени се визуализират като легенда в графика за по-бърза ориентация.</li>
                 <li>Системните смени „Почивка“, „Отпуск“ и „Болничен“ не могат да бъдат изтрити.</li>
                 <li>При изтриване на потребителска смяна, кодът се заменя автоматично там, където е използван.</li>
               </ul>
             </article>
 
             <article>
-              <h3>8) Заключване и експорт</h3>
+              <h3>9) Настройки → Потребители и календар / празници</h3>
+              <ul>
+                <li>В <strong>Потребители</strong> създавате достъп за служител: имейл, парола, роля и обновяване на списъка.</li>
+                <li>В <strong>Календар / Празници</strong> зареждате година, добавяте/редактирате празнични дни и работни override-и.</li>
+                <li>Правилно поддържаният календар влияе директно върху норма, отпуск и заплащане на празничен труд.</li>
+              </ul>
+            </article>
+
+            <article>
+              <h3>10) Заключване, експорт и отчетност</h3>
               <ul>
                 <li><strong>„Заключи график“</strong> спира редакции за текущия месец.</li>
                 <li><strong>„Отключи“</strong> връща възможността за промени.</li>
-                <li>Експортите <strong>Excel</strong> и <strong>PDF</strong> генерират текущата таблица за отчет и архив.</li>
+                <li>Експортите <strong>Excel</strong> и <strong>PDF</strong> генерират текущата таблица за отчет, архив и споделяне.</li>
+                <li>Препоръка: заключвайте графика едва след финална HR/мениджърска проверка на отпуски и извънредни часове.</li>
               </ul>
             </article>
           </div>
@@ -505,15 +527,36 @@
               </p>
             </article>
             <article>
+              <h4>Добавих смяна, но не се вижда за конкретен отдел. Защо?</h4>
+              <p>
+                Проверете дали смяната е създадена като global или е вързана към друг отдел. При импорт също потвърдете, че е
+                избран правилният отдел преди Commit.
+              </p>
+            </article>
+            <article>
               <h4>Защо поле не се редактира?</h4>
               <p>
                 Най-честата причина е заключен месец. Проверете статуса до бутоните за заключване/отключване.
               </p>
             </article>
             <article>
+              <h4>Какво да направя, ако акаунтът ми има достъп до няколко фирми?</h4>
+              <p>
+                След вход изберете фирма от екрана „Избери фирма“, а в приложението използвайте превключвателя на фирми само
+                ако имате съответните права.
+              </p>
+            </article>
+            <article>
               <h4>Какво да правя при промяна в екипа по средата на месеца?</h4>
               <p>
                 Добавете или редактирайте служителя в таб „Служители“, след което актуализирайте смените му в текущия график.
+              </p>
+            </article>
+            <article>
+              <h4>Защо нормата за месеца изглежда различна?</h4>
+              <p>
+                Нормата зависи от работните дни без празници, от настройките в „Изчисления“ и от календар/празници за годината.
+                Проверете и дали служителят е маркиран за СИРВ.
               </p>
             </article>
           </div>
